# botctl

./: .gitignore  .readthedocs.yaml  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  PLANS-Docs.md  PLANS-Serve-Mode.md  PLANS-Sqlite-Phase2.md  PLANS-Sqlite.md  PROMPT-Dynamic-Duo.md  PROMPT-Ralph-Wiggum-Wishlist.md  README.md  VISION.md  WISHLIST-Design.md  WISHLIST.md
docs/: HERO-BACKGROUND-PROMPT.txt  README.md  architecture.md  automation.md  classifier.md  command-reference.md  contributing.md  docusaurus.config.js  getting-started.md  package-lock.json  package.json  prompt-handoff.md  serve-mode.md  sidebars.js  testing-and-fixtures.md  troubleshooting.md  workflows.md
docs/docs/: api-reference.mdx  architecture.mdx  automation.mdx  classifier.mdx  command-reference.mdx  contributing.mdx  getting-started.mdx  intro.mdx  mcp.mdx  prompt-handoff.mdx  serve-mode.mdx  testing-and-fixtures.mdx  troubleshooting.mdx  workflows.mdx
docs/src/css/: custom.css
docs/src/pages/: index.js
fixtures/cases/agy_banner_gone_busy/: expected.txt  frame.txt
fixtures/cases/agy_banner_gone_chat_ready/: expected.txt  frame.txt
fixtures/cases/agy_busy_responding/: frame.txt
fixtures/cases/agy_chat_ready/: frame.txt
fixtures/cases/agy_command_permission/: expected.txt
fixtures/cases/agy_folder_trust_prompt/: expected.txt  frame.txt
fixtures/cases/agy_permission_prompt/: expected.txt  frame.txt
fixtures/cases/agy_settings_persist_prompt/: expected.txt  frame.txt
fixtures/cases/chat_ready/: frame.txt  (+1 more)
skills/botctl-prompt/: SKILL.md
src/: agy.rs  app.rs  automation.rs  classifier.rs  cli.rs  dashboard.rs  fixtures.rs  grok.rs  http_api.rs  last_message.rs  lib.rs  main.rs  mcp.rs  mcp_http.rs  mcp_protocol.rs  mcp_registry.rs  mcp_session.rs  mcp_stdio.rs  observe.rs  opencode.rs  permission_babysit.rs  pi.rs  proc_fd.rs  prompt.rs  recovery.rs  runtime.rs  screen_model.rs  serve.rs  skill.rs  storage.rs  tmux.rs  workspace.rs  yolo.rs
tests/: replay.rs
(+59 files in other folders)
