[package]
name = "botctl"
version = "0.2.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[dependencies]
ctrlc = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
uuid = { version = "1", features = ["v7"] }
