[package]
name = "botctl"
version = "0.2.1"
edition = "2024"
description = "CLI for observing and safely driving Claude Code sessions inside tmux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/colinmollenhour/botctl"
homepage = "https://botctl.readthedocs.io/en/latest/"
documentation = "https://botctl.readthedocs.io/en/latest/"
keywords = ["claude", "tmux", "automation", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "docs/**",
    "target/**",
    "PLANS-*.md",
    "PROMPT-*.md",
    "VISION.md",
    "WISHLIST.md",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[dependencies]
 crossterm = "0.28"
 ctrlc = "3"
 libc = "0.2"
 ratatui = "0.29"
 rusqlite = { version = "0.32", features = ["bundled"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
 unicode-width = "0.2"
 uuid = { version = "1", features = ["v7"] }
